--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-theme: jekyll-theme-minimal #
-#remote_theme: THEME-NAME
+#theme: jekyll-theme-minimal #
+#https://github.com/
+remote_theme: sEver/jekyll-theme-chirpy
