--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+# Jekyll static site generator config
 #theme: jekyll-theme-minimal #
 #https://github.com/
+#
 remote_theme: sEver/jekyll-theme-chirpy
